fix: adjust card text alignment and width for improved layout consistency

--- a/src/app/colleagues/colleagues.component.scss
+++ b/src/app/colleagues/colleagues.component.scss
@@ -121,12 +121,12 @@
 
   p {
     text-align: center;
-    width: 180px;
+    width: 100%;
     margin: 0;
   }
 
   .border-card {
-    width: calc(100% - 180px);
+    width: 100%;
     height: 1px;
     background: linear-gradient(to right,
         rgba(255, 255, 255, 0.8) 0%,
